--- a/src/pages/customerService/cSstyle.less
+++ b/src/pages/customerService/cSstyle.less
@@ -30,6 +30,8 @@
 
 // 信息盒子
 .chatinfo {
+  min-width: 80px;
+  min-height: 30px;
   max-width: 60%;
   word-wrap: break-word;
   white-space: normal;
